@@ -1101,7 +1101,7 @@ Sathish Tiptur <Sathish.Tiptur@geind.ge.com>
 Michael Rushton <miker@mbmnz.co.nz>
 Arno Pernozzoli <a.bernicchia@tiscalinet.it>
 Calum Mitchell <calum.mitchell@cp.net>
-Jerry Odenwelder <jerryo@atl.fundtech.com>
+Jerry Odenwelder <jerry.o@mindspring.com>
 Kent Stewart <kbstew99@hotmail.com>
 Alexander Kogan <jk@kogan.nnov.ru>
 Michael Lindner <mikel@att.net>
